Sync commit